samples/_failures_safe/1761346242_45418f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_188d011d.c: In function ‘main’:
./samples/SAFE/__tmp_188d011d.c:140:25: error: missing terminating " character
  140 |         fprintf(stderr, "Compression
      |                         ^~~~~~~~~~~~
./samples/SAFE/__tmp_188d011d.c:140:9: error: expected expression at end of input
  140 |         fprintf(stderr, "Compression
      |         ^~~~~~~
./samples/SAFE/__tmp_188d011d.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_188d011d.c:140:9: error: expected declaration or statement at end of input
